# command-center

./: .PLAN.md.swn  .flake8  .gitignore  .pre-commit-config.yaml  README.md  TASKS.md  pr_description.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_todo_parsing_manual.py
cc/: __init__.py  cli.py  config.py  session.py  status.py  ticket.py
ccc/: __init__.py  api_environments.py  api_request.py  api_testing.py  build_runner.py  build_status.py  claude_chat.py  claude_session.py  cli.py  config.py  editor_manager.py  external_tools.py  git_operations.py  git_status.py  multi_agent_manager.py  plan_reviser.py  questions.py  session.py  status.py  status_monitor.py  tasks_manager.py  test_status.py  ticket.py  todo.py  tui.py  utils.py
ccc/tui/: __init__.py  api_widgets.py  app.py  chat_dialogs.py  chat_widgets.py  dialogs.py  widgets.py
ccc/tui/widgets/: __init__.py  agent_card.py  agents_pane.py  button_bar.py  status_bar.py  tasks_pane.py
docs/: GETTING_STARTED.md  HANDOFF_CHECKLIST.md  IMPLEMENTATION_PLAN.md  PHASES.md  PHASES_3-10.md  PHASE_1.md  PHASE_2.md  PHASE_5.md  PHASE_6.md  PHASE_6_USAGE.md  PHASE_7.md  PHASE_7_ENHANCEMENTS.md  PHASE_7_FUTURE_ASSERTIONS.md  PHASE_8.md  PHASE_REFERENCE_CARDS.md  PRD.md  REQUEST_LIBRARY.md  UI_SPEC.md  VALIDATION_REPORT.md  WEEK2_TESTING_SUMMARY.md
docs/Initial implementation/: API_TESTING.md  PHASE_1.md  PHASE_10.md  PHASE_2.md  PHASE_3.md  PHASE_4.md  PHASE_6.md  PHASE_7.md  PHASE_9.md  UI_SPEC.md  WEEK2_TESTING_SUMMARY.md
examples/: config.yaml.example  phase6_demo.py
scripts/: cc-build  cc-test
tests/: __init__.py  test_build_status.py  test_button_bar.py  test_claude_chat.py  test_config.py  test_external_tools.py  test_git_status.py  test_multi_agent_manager.py  test_status_bar.py  test_status_monitor.py  test_tasks_manager.py  test_test_status.py  test_ticket.py  test_todo.py  test_utils.py
