[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "command-center"
version = "0.1.0"
description = "Terminal-based mission control for managing development tickets with AI agents"
requires-python = ">=3.9"

[tool.ruff]
# Ruff is a fast Python linter
line-length = 100
target-version = "py39"

# Enable specific rule sets
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez (enforce timezone-aware datetimes)
    "PIE",  # flake8-pie
    "T20",  # flake8-print (catch print statements)
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
]

ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (used in Click)
    "T201",   # print found (we use print for CLI output)
    "ARG001", # unused function argument (common in Click commands)
    "ARG002", # unused method argument
]

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
]

[tool.ruff.per-file-ignores]
# Allow unused imports in __init__.py files
"__init__.py" = ["F401"]
# Allow print statements in CLI module
"ccc/cli.py" = ["T201"]

[tool.ruff.isort]
# Import sorting configuration
known-first-party = ["ccc"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]

[tool.black]
# Black code formatter configuration
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.isort]
# Import sorting (alternative to ruff's isort)
profile = "black"
line_length = 100
known_first_party = ["ccc"]
skip_gitignore = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
# Type checking configuration
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false  # Start permissive, can tighten later
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_no_return = true
strict_optional = true

# Per-module options
[[tool.mypy.overrides]]
module = [
    "libtmux.*",
    "textual.*",
    "rich.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
# Pytest configuration
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
# Coverage configuration
source = ["ccc"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
# Coverage reporting
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
